NO-JIRA Fix issues on master